reporting-service/k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reporting-dev-service
spec:
  selector:
    app: reporting-dev-service
  ports:
    - port: 80
      targetPort: 3003
